addressing Rodolfo's comments in issue #24

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -238,7 +238,9 @@ several packages have been written
 that allows R to connect to relational databases and use the R programming language as the front end (what the user types in) to pull data from them. These different relational database management systems have their own advantages, limitations, and excels in particular scenarios. In this book, we will 
 give examples of how to do this using R with SQLite and PostgreSQL databases.
 
-### Reading data from a SQLite database
+### Connecting to a database
+
+#### Reading data from a SQLite database
 
 SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
 
@@ -300,8 +302,7 @@ tail(aboriginal_lang_db)
 ```
 Additionally, some operations will not work to extract columns or single values from the reference given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database reference object, it is advisable to bring it into your local machine's memory using `collect` as a data frame. Warning: Usually, databases are very big! Reading the object into your local machine may give an error or take a lot of time to run so be careful if you plan to do this! 
  
-
-### Reading data from a PostgreSQL database 
+#### Reading data from a PostgreSQL database 
 
 PostgreSQL (also called Postgres) is a very popular free and open-source option for relational database software. Unlike SQLite, PostgreSQL uses 
 a client–server database engine, as it was designed to be used and accessed on a network. This means that you have to provide more 
@@ -324,6 +325,8 @@ can_mov_db_con <- dbConnect(RPostgres::Postgres(), dbname = "can_mov_db",
                         host = "r7k3-mds1.stat.ubc.ca", port = 5432,
                         user = "user0001", password = '################')
 ```
+
+### Interacting with a database
 
 After opening the connection, everything looks and behaves almost identically to when we were using an SQLite database in R. For example, we can again 
 use `dbListTables` to find out what tables are in the `can_mov_db` database:
