--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -119,7 +119,7 @@ project, it is well worth spending the time to get your data into a tidy format 
 
 One common thing that often has to be done to get data into a tidy format is to combine columns that are really part the same variable but currently stored in separate columns. To do this we can use the function `pivot_longer`. `pivot_longer` acts to combine columns, and thus makes the data frame narrower.
 
-Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. We will work with a subset of the `region_lang` data, which contains data retreived from the 2016 Canadian census. Our dataset contains counts of how many Canadians report each language as their mother tongue for the five biggest cities in Canada. Our dataset is stored in an untidy format as shown below:
+Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. We will work with a subset of the `region_lang` data, which contains data retreived from the 2016 Canadian census. Our data set contains the counts for each census division of how many Canadians report each language as their mother tongue for the five biggest cities in Canada. Our dataset is stored in an untidy format as shown below:
 
 ```{r 02-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -133,7 +133,7 @@ To accomplish this data tranformation we will use the `tidyverse` function `pivo
 
 1. `data`: the dataset
 
-2. `cols` : the names of the columns that we want to combine  (the `cols` argument)
+2. `cols` : the names of the columns that we want to combine
 
 3. `names_to`: the name of a new column that will be created, whose values will come from the *names of the columns* that we want to combine 
 
@@ -143,21 +143,21 @@ For the above example, we use `pivot_longer` to combine the Toronto, Montreal, V
 
 ```{r}
 region_lang_tidy <- pivot_longer(region_lang_wide, 
-                         cols = Toronto:Vancouver,
+                         cols = Toronto:Edmonton,
                          names_to = "region", 
                          values_to = "mother_tongue")
 region_lang_tidy
 ```
 
-> **Splitting code across lines**: In the code above, the call to the `gather` function is split across several lines.*
+> **Splitting code across lines**: In the code above, the call to the `pivot_longer` function is split across several lines.*
 > *This is allowed and encouraged when programming in R when your code line gets too long*
 > *to read clearly. When doing this, it is important to end the line with a comma `,` so that R*
 > *knows the function should continue to the next line.*
 
 The data above is now tidy because all 3 criteria for tidy data have now been met:
 
-1. All the variables (`candidate` and `result`) are now their own columns in the data frame. 
-2. Each observation, i.e., each candidate's name, result, and candidacy year, are in a single row.
+1. All the variables (`region` and `mother_tongue`) are now their own columns in the data frame. 
+2. Each observation, i.e., each category, language, region, and count of Canadians where that language is the mother tongue, are in a single row.
 3. Each value is a single cell, i.e., its row, column position in the data frame is not shared with another value.
 
 ### Using separate to deal with multiple delimiters
@@ -168,30 +168,17 @@ the winner and runnerup columns contain both the candidate's name as well as the
 messy data tidy we'll have to fix both of these issues.
 
 ```{r, warning=FALSE, message=FALSE}
-hist_vote_party <- read_csv("data/historical_vote_messy.csv")
-hist_vote_party
+region_lang_messy <-read_csv("data/region_lang_top5_cities_messy.csv")
+region_lang_messy 
 ```
-
-First we'll use `gather` to create the result and candidate columns, as we did previously:
+We'll use `separate` to split the language column into two columns, one that contains only the language, and one that contains a the category for which that language falls into:
 
 ```{r}
-hist_vote_party_gathered <- gather(hist_vote_party, 
-                          key = result, 
-                          value = candidate, 
-                          winner, runnerup)
-hist_vote_party_gathered
-```
-
-Then we'll use `separate` to split the candidate column into two columns, one that 
-contains only the candidate's name ("candidate"), and one that contains a short identifier for which 
-political party the candidate belonged to ("party"):
-
-```{r}
-hist_vote_party_tidy <- separate(hist_vote_party_gathered,
-                                 col = candidate, 
-                                 into = c("candidate", "party"), 
+region_lang_tidy <- separate(region_lang_messy,
+                                 col = language, 
+                                 into = c("category", "language"), 
                                  sep = "/") 
-hist_vote_party_tidy
+region_lang_tidy
 ```
 
 Is this data now tidy? Well, if we recall the 3 criteria for tidy data:
@@ -200,7 +187,7 @@ Is this data now tidy? Well, if we recall the 3 criteria for tidy data:
 - each column is a single variable, and
 - each value is a single cell.
 
-We can see that this data now satifies all 3 criteria, making it easier to analyze.
+We can see that this data now satisfies all 3 criteria, making it easier to analyze.
 For example, we could visualize the number of winning candidates for each party over this time span:
 
 ```{r 02-candidate-count, fig.height=4, fig.width=4}
