--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -119,7 +119,7 @@ project, it is well worth spending the time to get your data into a tidy format 
 
 One common thing that often has to be done to get data into a tidy format is to combine columns that are really part the same variable but currently stored in separate columns. To do this we can use the function `pivot_longer`. `pivot_longer` acts to combine columns, and thus makes the data frame narrower.
 
-Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. We will work with a subset of the `region_lang` data, which contains data retreived from the 2016 Canadian census. Our data set contains the counts for each census division of how many Canadians report each language as their mother tongue for the five biggest cities in Canada. Our dataset is stored in an untidy format as shown below:
+Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. We will work with a subset of the `region_lang` data, which contains data retreived from the 2016 Canadian census. Our data set contains the counts for each census division of how many Canadians report each language as their mother tongue for five major Canadian cities (Toronto, Montreal, Vancouver, Calgary and Edmonton).  Our data set is stored in an untidy format as shown below:
 
 ```{r 02-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -164,21 +164,31 @@ The data above is now tidy because all 3 criteria for tidy data have now been me
 
 As discussed above, data are also not considered tidy when multiple values are stored in the same cell. In addition to the 
 previous untidiness we addressed in the earlier version of this data set, the one we show below is even messier: 
-the winner and runnerup columns contain both the candidate's name as well as their political party. To make this 
-messy data tidy we'll have to fix both of these issues.
+the Toronto, Montreal, Vancouver, Calgary and Edmonton columns contain both the counts of Canadians that speak each language as their mother tongue and the population of that region. To make this messy data tidy we'll have to fix both of these issues.
 
 ```{r, warning=FALSE, message=FALSE}
-region_lang_messy <-read_csv("data/region_lang_top5_cities_messy.csv")
+region_lang_messy <- read_csv("data/region_lang_top5_cities_messy.csv")
 region_lang_messy 
 ```
-We'll use `separate` to split the language column into two columns, one that contains only the language, and one that contains a the category for which that language falls into:
+
+First we’ll use gather to create the region and mother_tongue columns, as we did previously:
 
 ```{r}
-region_lang_tidy <- separate(region_lang_messy,
-                                 col = language, 
-                                 into = c("category", "language"), 
+region_lang_long_messy <- pivot_longer(region_lang_messy, 
+                         cols = Toronto:Edmonton,
+                         names_to = "region", 
+                         values_to = "value")
+region_lang_long_messy
+```
+
+Then we'll use `separate` to split the  `value` column into two columns, one that contains only the counts of Canadians that speak each language as their mother tongue, and one that contains the population for the region:
+
+```{r}
+region_lang_pop_tidy <- separate(region_lang_long_messy,
+                                 col = value, 
+                                 into = c("mother_tongue", "region_population"), 
                                  sep = "/") 
-region_lang_tidy
+(region_lang_pop_tidy)
 ```
 
 Is this data now tidy? Well, if we recall the 3 criteria for tidy data:
