--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -18,7 +18,8 @@ By the end of the chapter, students will be able to:
     - `mutate`
     - `summarize`
     - `group_by`
-    - `gather`
+    - `pivot_longer`
+    - `pivot_wider`
     - `separate`
     - `%in%`
 
@@ -119,19 +120,23 @@ project, it is well worth spending the time to get your data into a tidy format 
 
 One common thing that often has to be done to get data into a tidy format is to combine columns that are really part the same variable but currently stored in separate columns. To do this we can use the function `pivot_longer`. `pivot_longer` acts to combine columns, and thus makes the data frame narrower.
 
-Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. We will work with a subset of the `region_lang` data, which contains data retrieved from the 2016 Canadian census. Our data set contains the counts for each census division of how many Canadians report each language as their mother tongue for five major Canadian cities (Toronto, Montreal, Vancouver, Calgary and Edmonton).  Our data set is stored in an untidy format as shown below:
+Data is often stored in a wider, not tidy, format because this format is often more intuitive for human readability and understanding, and humans create data sets. 
+
+We will work with a data set called [region_lang](https://ttimbers.github.io/canlang/), which contains data retrieved from the 2016 Canadian census. This data set contains counts, for each census metropolitan area, of how many Canadians cited each language as their mother tongue, the language spoken most often at home, and work and which language they have knowledge for. 
+
+We will work with a subset of the `region_lang` data called `region_lang_top5_cities_wide.csv`, which contains the counts of only the mother tongue languages for five major Canadian cities (Toronto, Montreal, Vancouver, Calgary and Edmonton). Our data set is stored in an untidy format as shown below:
 
 ```{r 02-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
-region_lang_wide <- read_csv("data/region_lang_top5_cities_wide.csv") 
-region_lang_wide
+lang_wide <- read_csv("data/region_lang_top5_cities_wide.csv") 
+lang_wide
 ```
 
 What is wrong with our untidy format above? From a data analysis perspective, this format is not ideal because in this format the outcome of the variable "region" (Toronto, Montreal, Vancouver, Calgary and Edmonton) is stored as column names and not easily accessible for the data analysis functions we will want to apply to our data set. Additionally, the values of the "mother_tongue" variable are spread across multiple columns and will require some sort of binding or joining to get them into one single column to allow us to do our desired visualization and statistical tasks later on.
 
-To accomplish this data tranformation we will use the `tidyverse` function `pivot_longer`. To use gather we need to specify the:
+To accomplish this data transformation we will use the `tidyverse` function `pivot_longer`. To use `pivot_longer` we need to specify the:
 
-1. `data`: the dataset
+1. `data`: the data set
 
 2. `cols` : the names of the columns that we want to combine
 
@@ -139,14 +144,14 @@ To accomplish this data tranformation we will use the `tidyverse` function `pivo
 
 4. `values_to`: the name of a new column that will be created, whose values will come from the *values of the columns* we want to combine 
 
-For the above example, we use `pivot_longer` to combine the Toronto, Montreal, Vancouver, Calgary and Edmonton columns into a single column called `region`, and create a column called `mother_tongue` that contains the count of how many Canadians report each language as their mother tongue for each census division:
+For the above example, we use `pivot_longer` to combine the Toronto, Montreal, Vancouver, Calgary and Edmonton columns into a single column called `region`, and create a column called `mother_tongue` that contains the count of how many Canadians report each language as their mother tongue for each metropolitan area:
 
 ```{r}
-region_lang_tidy <- pivot_longer(region_lang_wide, 
+lang_mother_tidy <- pivot_longer(lang_wide, 
                          cols = Toronto:Edmonton,
                          names_to = "region", 
                          values_to = "mother_tongue")
-region_lang_tidy
+lang_mother_tidy
 ```
 
 > **Splitting code across lines**: In the code above, the call to the `pivot_longer` function is split across several lines.*
@@ -162,47 +167,72 @@ The data above is now tidy because all 3 criteria for tidy data have now been me
 
 ### Going from long to wide using `pivot_wider`
 
-Suppose we have the opposite problem we had above and we need to separate observation currently stored in a single column into multiple columns. To do this we can use the function `pivot_wider`. `pivot_wider` acts to increase the number of columns, and thus makes the data frame wider.
+Suppose we have observations scattered across multiple rows rather than in a single row. To tidy this data we can use the function `pivot_wider`, which generally increases the number of columns (widens) and decreases the number of rows in our data set.
 
-For example, each observation is a census division, but each observation is is two rows, as shown in the example below:
+We will now work with another data set, `region_lang_top5_cities_long.csv`, which contains contains the number of Canadians reporting their primary language at home and at work for five major cities (Toronto, Montreal, Vancouver, Calgary and Edmonton). 
 ```{r 02-reading-long, warning=FALSE, message=FALSE}
-region_lang_long <- read_csv("data/region_lang_top5_cities_narrow.csv") 
-region_lang_long
+lang_long <- read_csv("data/region_lang_top5_cities_long.csv") 
+lang_long
 ```
+What is wrong with the untidy format above? In this example each observation is a region for a particular language, however, in the data set each observation is split across multiple rows. To fix this we will use `pivot_wider`, and we need to specify the:
+
+1. `data`: the dataset
+
+2. `names_from`: the name of a the column from which to take the variable names
+
+3. `values_from`: the name of the column from which to take the values
+
+```{r , warning=FALSE, message=FALSE}
+lang_home_tidy <- pivot_wider(lang_long, 
+                                names_from = type, 
+                                values_from = count)
+lang_home_tidy
+```
+
+The data above is now tidy! We  an go through the 3 criteria again to check that this data is a tidy data set. 
+
+1. All the variables are their own columns in the data frame, `most_at_home`, and `most_at_work` have been separated into their own columns in the data frame. 
+2. Each observation, i.e., each `category`, `language`, `region`, `most_at_home` and `most_at_work`, are in a single row.
+3. Each value is a single cell, i.e., its row, column position in the data frame is not shared with another value.
+
+You might notice that we have the same number of columns in our data set as we did above. Therefore `pivot_wider` didn't really "widen" our data set as the name suggests. However, if we had more than two categories in the original `type` column then we would see the data set "widen".  
 
 ### Using `separate` to deal with multiple delimiters
 
 As discussed above, data are also not considered tidy when multiple values are stored in the same cell. In addition to the 
 previous untidiness we addressed in the earlier version of this data set, the one we show below is even messier: 
-the Toronto, Montreal, Vancouver, Calgary and Edmonton columns contain both the counts of Canadians that speak each language as their mother tongue and the population of that region. To make this messy data tidy we'll have to fix both of these issues.
+the Toronto, Montreal, Vancouver, Calgary and Edmonton columns contain both the number of Canadians reporting their primary language at home and at work separated by the delimiter "/". The column names are the values of a variable and the each value does not have it's own cell. To make this messy data tidy we'll have to fix both of these issues.
 
 ```{r, warning=FALSE, message=FALSE}
-region_lang_messy <- read_csv("data/region_lang_top5_cities_messy.csv")
-region_lang_messy 
+lang_messy <- read_csv("data/region_lang_top5_cities_messy.csv")
+lang_messy 
 ```
 
-First we’ll use gather to create two columns: region and value, similar to what we did previously:
+First we’ll use `pivot_longer` to create two columns, `region` and `value`, similar to what we did previously:
 
 ```{r}
-region_lang_long_messy <- pivot_longer(region_lang_messy, 
+lang_messy_longer <- pivot_longer(lang_messy, 
                          cols = Toronto:Edmonton,
                          names_to = "region", 
                          values_to = "value")
-region_lang_long_messy
+lang_messy_longer
 ```
 
-Then we'll use `separate` to split the `value` column into two columns, one that contains only the counts of Canadians that speak each language most at home, and one that contains the counts for most at work for each census division:
+Then we'll use `separate` to split the `value` column into two columns, one that contains only the counts of Canadians that speak each language most at home, and one that contains the counts for most at work for each region:
 
 ```{r}
-region_lang_pop_tidy <- separate(region_lang_long_messy,
+lang_no_delimiter <- separate(lang_messy_longer,
                                  col = value, 
-                                 into = c("most_at_home", "most_at_work"), 
+                                 into = c("most_at_home", "most_at_work"),
                                  sep = "/") 
-region_lang_pop_tidy <- mutate(region_lang_pop_tidy,  
+lang_no_delimiter
+```
+You might notice in the table the word `<chr>` is beneath each of the column names. The word under the column name indicates the data type of each column. Here all of our variables are "character" data types. A character data type can be a letter or a number. It makes sense for region, category and language to be stored as a character type. However, if we want to apply any functions that treat the `most_at_home` and `most_at_work` columns as a number (e.g. finding the maximum of the column) it won't be possible to do if the variable is stored as a `character`. R has a variety of data types, but here we will use `mutate()` to convert these two columns to an "integer" data type, which are numbers that do not have any decimals. 
+```{r}
+lang_no_delimiter <- mutate(lang_no_delimiter,  
                                most_at_home = as.integer(most_at_home), 
                                most_at_work = as.integer(most_at_work))
 ```
-
 Is this data now tidy? Well, if we recall the 3 criteria for tidy data:
 
 - each row is a single observation,
@@ -210,15 +240,15 @@ Is this data now tidy? Well, if we recall the 3 criteria for tidy data:
 - each value is a single cell.
 
 We can see that this data now satisfies all 3 criteria, making it easier to analyze.
-For example, we could visualize the two most common languages reported by Canadians as their primary language at home for each of these five major Canadian cities:
+For example, we could visualize for each of these five major Canadian cities what the two most common languages reported by Canadians as their primary language at home are:
 
 ```{r 02-plot}
-top10 <- region_lang_pop_tidy %>% 
+top2 <- lang_no_delimiter %>% 
   arrange(desc(most_at_home)) %>% 
   group_by(region) %>% 
   slice(1:2)
 
-ggplot(top10, aes(x = region, y = most_at_home, fill = language)) + 
+ggplot(top2, aes(x = region, y = most_at_home, fill = language)) + 
   geom_bar(stat = "identity")+ 
   scale_fill_brewer(palette="Set1") +
   theme(axis.text.x = element_text(angle = 90)) +
@@ -229,7 +259,7 @@ ggplot(top10, aes(x = region, y = most_at_home, fill = language)) +
 
 ```
 
-From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver English was cited as the most common primary language used at home. However, in Montreal French was the most common language used at home and English was second. Punjabi, Tagalog, Cantonese and Mandarin were the second most common languages in Calgary, Edmonton, Toronto and Vancouver respectively. 
+From this visualization, we can see that in Calgary, Edmonton, Toronto and Vancouver, English was cited as the most common primary language used at home. However, in Montreal French was the most common language used at home and English was second. Punjabi, Tagalog, Cantonese and Mandarin were the second most common languages in Calgary, Edmonton, Toronto and Vancouver respectively. 
 
 ### Notes on defining tidy data
 
@@ -286,21 +316,18 @@ Next, let's learn about the details of using the pipe, and look at some examples
 
 ### Using `%>%` to combine `filter` and `select`
 
-Recall the US state-level property, income, population, and voting data that we explored in chapter 1: 
+Let's work with our tidy `lang_home_tidy` data set from above, which contains the number of Canadians reporting their primary language at home and at work for five major cities (Toronto, Montreal, Vancouver, Calgary and Edmonton):
 ```{r, warning=FALSE, message=FALSE}
-us_data <- read_csv("data/state_property_vote.csv")
-us_data
+lang_home_tidy
 ```
 
-Suppose we want to create a subset of the data with only the values for median income and median property value for the state of 
-California. To do this, we can use the functions `filter` and `select`. First we use `filter` to create a data frame called `ca_prop_data` that 
-contains only values for the state of California. We then use `select` on this data frame to keep only the median income and 
-median property value variables:
+Suppose we want to create a subset of the data with only the columns for the language and counts for each language spoken most at home for the city of Vancouver. To do this, we can use the functions `filter` and `select`. First we use `filter` to create a data frame called `van_data` that contains only values for the city of Vancouver. We then use `select` on this data frame to keep only the variables we want:
 
 ```{r}
-ca_prop_data <- filter(us_data, state == "California")
-ca_inc_prop <- select(ca_prop_data, med_income, med_prop_val)
-ca_inc_prop
+van_data <- filter(lang_home_tidy, region == "Vancouver")
+van_data
+van_data_selected <- select(van_data, language, most_at_home)
+van_data_selected
 ```
 
 Although this is valid code, there is a more readable approach we could take by using the pipe, `%>%`. With the pipe, 
@@ -308,9 +335,9 @@ we do not need to create an intermediate object to store the output from `filter
 output of `filter` to the input of `select`:
 
 ```{r}
-ca_inc_prop <- filter(us_data, state == "California") %>% 
-                    select(med_income, med_prop_val)
-ca_inc_prop
+van_data_selected <- filter(lang_home_tidy, region == "Vancouver") %>% 
+                    select(language, most_at_home)
+van_data_selected
 ```
 
 But wait - why does our `select` function call look different in these two examples? When you use the pipe, 
@@ -323,19 +350,18 @@ As you can see, both of these approaches give us the same output but the second 
 ### Using `%>%` with more than two functions
 
 The `%>%` can be used with any function in R. Additionally, we can pipe together more than two functions. For
-example, we can pipe together three functions to order the states by commute time for states whose population 
-is less than 1 million people:
+example, we can pipe together three functions to order the rows by counts of the language most spoken at home for row where the counts are more than 10000 people:
 
 ```{r}
-small_state_commutes <- filter(us_data, pop < 1000000) %>% 
-  select(state, avg_commute) %>% 
-  arrange(avg_commute)
-small_state_commutes
+large_region_lang <- filter(lang_home_tidy, most_at_home > 10000) %>% 
+  select(region, language, most_at_home) %>% 
+  arrange(most_at_home)
+large_region_lang
 ```
 
 > **Note:**: `arrange` is a function that takes the name of a data frame and one or more column(s), and returns a 
 > data frame where the rows are ordered by those columns in ascending order. Here we used only one column for sorting 
-> (`avg_commute`), but more than one can also be used. To do this, list additional columns separated by commas. 
+> (`most_at_home`), but more than one can also be used. To do this, list additional columns separated by commas. 
 > The order they are listed in indicates the order in which they will be used for sorting. This is much like how an English
 > dictionary sorts words: first by the first letter, then by the second letter, and so on.
 >
@@ -350,15 +376,14 @@ small_state_commutes
 
 As a part of many data analyses, we need to calculate a summary value for the data (a summary statistic). A useful `dplyr` function for doing this is 
 `summarize`. Examples of summary statistics we might want to calculate are the number of observations, the average/mean value 
-for a column, the minimum value for a column, etc. Below we show how to use the summarize function to calculate the minimum, maximum 
-and mean commute time for all US states:
+for a column, the minimum value for a column, etc. Below we show how to use the summarize function to calculate the minimum and maximum 
+number of Canadians reporting a particular language as their primary language at home:
 
 ```{r}
-us_commute_time_summary <- summarize(us_data, 
-                                  min_mean_commute = min(avg_commute),
-                                  max_mean_commute = max(avg_commute),
-                                  mean_mean_commute = mean(avg_commute))
-us_commute_time_summary
+lang_summary <- summarize(lang_home_tidy, 
+                          min_most_at_home = min(most_at_home),
+                          most_most_at_home = max(most_at_home))
+lang_summary
 ```
 
 ### Calculating group summary statistics:
@@ -368,15 +393,13 @@ example, here we can use `group_by` to group the states based on which party the
 the minimum, maximum and mean commute time for each of the groups.
 
 The `group_by` function takes at least two arguments. The first is the data frame that will be grouped, and the second and onwards are columns 
-to use in the grouping. Here we use only one column for grouping (`party`), but more than one can also be used. To do this, list additional 
-columns separated by commas. 
+to use in the grouping. Here we use only one column for grouping (`party`), but more than one can also be used. To do this, list additional columns separated by commas. 
 
 ```{r}
-us_commute_time_summary_by_party <- group_by(us_data, party) %>% 
-  summarize(min_mean_commute = min(avg_commute),
-            max_mean_commute = max(avg_commute),
-            mean_mean_commute = mean(avg_commute))
-us_commute_time_summary_by_party
+lang_summary_by_region <- group_by(lang_home_tidy, region) %>% 
+  summarize(min_most_at_home = min(most_at_home),
+            max_most_at_home = max(most_at_home))
+lang_summary_by_region
 ```
 
 ## Additional reading on the `dplyr` functions
